# Smart_Task

./: .gitignore  pyproject.toml  repo-index.json
.docs/Smart_Task_Architecture/: 01_Domain_Model_and_Validation.md  02_Data_Schema_and_Persistence.md  03_Topic_Import_Pipeline.md  04_Wave_Assignment_System.md  05_Verification_Method_System.md  06_CLI_Command_Model.md
.docs/Spec_Driven_Graph/: 01-document-taxonomy.md  02-chain-graph-model.md  03-class-prd.md  04-class-architecture.md  05-class-spec.md  06-class-spec-topic.md  07-class-interface.md  08-class-adr.md  09-class-plan.md  (+5 more)
Embedding MCP Server/: __init__.py  pyproject.toml
Embedding MCP Server/.docs/: 01-embedding-model-layer.md  02-vector-db-adapter-layer.md  03-embedding-service-layer.md  04-configuration-layer.md  05-embedding-mcp-local-server.md  06-embedding-mcp-network-server.md  07-memgraph-evaluation.md
Embedding MCP Server/embedding_model/: __init__.py  e5_model.py
Embedding MCP Server/embedding_service/: __init__.py  exceptions.py  service.py
Embedding MCP Server/mcp_local/: __init__.py  __main__.py  handlers.py  local_server.py  tools.py
Embedding MCP Server/mcp_network/: __init__.py  __main__.py  network_server.py
Embedding MCP Server/vector_db/: __init__.py  base.py  factory.py  faiss_adapter.py
smart_task/: __init__.py
tests/: __init__.py  test_cli.py  test_cli_commands.py  test_config.py  test_exporter.py  test_importer.py  test_json_schema.py  test_mcp_local.py  test_mcp_network.py  test_models.py  test_parser.py  test_repository.py  test_schema.py  test_wave_manager.py
(+120 files in other folders)
